# snap_ready

./: .gitignore  README.md  SnapReady_MVP_PRD.docx  SnapReady_MVP_PRD_v2.md  app.py  crop.py  export.py  feedback.py  phase0_validate.sh  pyproject.toml  render.yaml  requirements.txt  retouch.py  skills-lock.json  test_api.py  vercel.json
frontend/public/: index.html  main.js  result.html  style.css
static/: main.js
templates/: index.html  result.html
