[tool.poetry]
name = "snapready"
version = "0.1.0"
description = "One-click crop + retouch for headshot photographers"
authors = ["Josue"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.12"
jinja2 = "^3.1.6"
pillow = "^11.0.0"
mediapipe = "^0.10.20"
google-genai = "^1.2.0"
opencv-python-headless = "^4.11.0.86"
firebase-admin = "*-*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
